--- a/imports/templates/crear_cursos.html
+++ b/imports/templates/crear_cursos.html
@@ -110,7 +110,7 @@
          <div class="card card-profile">
             <div class="card-avatar">
                <a href="#pablo">
-               <img class="img" src="images/perfil.jpg">
+               <img class="img" src="/images/perfil.jpg">
                </a>
             </div>
             <div class="content">
