--- a/imports/templates/crearusuario.html
+++ b/imports/templates/crearusuario.html
@@ -492,8 +492,8 @@
       <div class="col-md-12">
          <div class="card">
             <div class="card-header" data-background-color="purple">
-               <h4 class="title ">Crear Un nuevo Usuario</h4>
-               <p class="category">Tenga cuidado con los campos de un nuevo usuario</p>
+               <h4 class="title ">Editar Usuario</h4>
+               <p class="category">Tenga cuidado con los campos</p>
             </div>
             <div class="card-content">
                <form>
