creando preguntas y buscando las mismas

--- a/client/layout/main_principal.html
+++ b/client/layout/main_principal.html
@@ -74,9 +74,9 @@
                      </a>
                   </li>-->
                   <li>
-                     <a href="notifications.html">
+                     <a href="/preguntas">
                         <i class="material-icons text-gray">notifications</i>
-                        <p>Notificaciones</p>
+                        <p>Preguntas</p>
                      </a>
                   </li>
                   
