--- a/client/layout/main_principal.html
+++ b/client/layout/main_principal.html
@@ -130,7 +130,7 @@
                            </ul>
                         </li>
                      </ul>
-                     <form class="navbar-form navbar-right" role="search">
+                     <!--<form class="navbar-form navbar-right" role="search">
                         <div class="form-group  is-empty">
                            <input type="text" class="form-control" placeholder="Search">
                            <span class="material-input"></span>
@@ -139,7 +139,7 @@
                            <i class="material-icons">search</i>
                            <div class="ripple-container"></div>
                         </button>
-                     </form>
+                     </form>-->
                   </div>
                </div>
             </nav>
