añadido puntuacion o calificacion de preguntas y respuestas

--- a/client/layout/main_principal.html
+++ b/client/layout/main_principal.html
@@ -41,7 +41,7 @@
                      </a>
                   </li>
                   {{/if}}
-                  {{#if isInRole 'admin,facilitador'}}
+                  {{#if isInRole 'admin,Facilitador'}}
                   <li>
                      <a href="/crear_cursos">
                         <i class="material-icons">content_paste</i>
