--- a/imports/templates/cursos.html
+++ b/imports/templates/cursos.html
@@ -323,9 +323,134 @@
                <div class="col-md-12">
                   <div class="row">
                      <div class="col-md-6">
-                        <h3>Clases o Materiales Del curso</h3>
+                        <h3>Clases o Materiales Del curso single</h3>
                      </div>
-                     {{#if isInRole 'admin,facilitador'}}
+                     
+                     <div class="col-md-6">
+                         {{#if isInRole 'admin,facilitador'}}
+                            <button class="btn-warning btn" data-toggle="modal" data-target="#myModal"> Agregar Nueva Clase</button>
+                            <a href="/editar-curso/{{Vercurso._id}}" class="btn-danger btn"> Editar Este Curso</a>
+                            <a href="/pregunta-curso/{{Vercurso._id}}" class="btn-primary btn">Preguntas</a>
+                        {{/if}}
+                     </div>
+                     
+                  </div>
+               </div>
+            </div>
+
+        <div class="row">
+            {{#each allClases}}
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header card-chart" data-background-color="green">
+                    <img src="images/curso.jpg">
+                    </div>
+                    <div class="card-content">
+                    <h4 class="title">{{nombreClase}} - {{sigla}}</h4>
+                    <p class="category">{{descripcionClase}}</p>
+                    </div>
+                    <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">access_time</i> {{createdAt}}
+                    </div>
+                    <center>
+                        <a href="/ver-material/{{_id}}" class="btn btn-primary">Acceder a la clase</a>
+                    </center>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+
+
+         </div>
+      </div>
+   </div>
+   <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+         <!-- Modal content-->
+         <div class="modal-content">
+            <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+               <h4 class="modal-title">Crear Nueva Clase o Material</h4>
+            </div>
+            <div class="modal-body">
+               <div class="card-content">
+                  <form method="POST" >
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="form-group label-floating is-empty">
+                              <label class="control-label">Nombre de Material o clase</label>
+                              <input type="text" name="nombreMaterial" class="form-control">
+                              <span class="material-input"></span>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="form-group label-floating is-empty">
+                              <label class="control-label">Descripcion de Material o clase</label>
+                              <input type="text" name="descripcionMaterial" class="form-control">
+                              <span class="material-input"></span>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="">
+                              <label class="control-label">Subir Material</label>
+                              <input name="videoMaterial" class="file-upload-input" type="file"/>
+                              {{#with Vercurso}}
+                              <input type="hidden" name="sigla" value="{{sigla}}"/>
+                              <input type="hidden" name="rca" value="{{_id}}"/>
+                              {{/with}}
+                              <span class="material-input"></span>
+                           </div>
+                        </div>
+                     </div>
+                     <button type="submit" class="btn btn-primary pull-right">Crear </button>
+                     <div class="clearfix"></div>
+                  </form>
+               </div>
+            </div>
+            <!--<div class="modal-footer">
+               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+               </div>-->
+            <!--<div class="fileupload fileupload-new" data-provides="fileupload">
+               <span class="btn btn-file">
+               <span class="fileupload-new">SSSS</span>
+               <span class="fileupload-exists">Andere</span>
+               <input name="xxx" class="file-upload-input" type="file"/>
+               </span>
+               <span class="fileupload-preview">
+               </span>
+               <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
+            </div>-->
+         </div>
+      </div>
+   </div>
+</template>
+
+<template name="ver_cursoMasterAll">
+   <div class="card">
+      <div class="card-header" data-background-color="purple">
+         {{#with Vercurso}}
+         <h4 class="title crear">{{nombre}}</h4>
+         <p class="category">
+            {{sigla}}
+            <!--<a target="_blank" href="https://github.com/mouse0270">Robert McIntosh</a>. Please checkout the <a href="http://bootstrap-notify.remabledesigns.com/" target="_blank">full documentation.</a>-->
+         </p>
+         {{/with}}
+      </div>
+      <div class="card-content">
+         <div class="places-buttons">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="row">
+                     <div class="col-md-6">
+                        <h3>Clases o Materiales Del curso all</h3>
+                     </div>
+                     {{#if isInRole 'admin'}}
                      <div class="col-md-6">
                         <button class="btn-warning btn" data-toggle="modal" data-target="#myModal"> Agregar Nueva Clase</button>
                         <a href="/editar-curso/{{Vercurso._id}}" class="btn-danger btn"> Editar Este Curso</a>
@@ -428,7 +553,6 @@
    </div>
 </template>
 
-
 <template name="cursosMateriales">
    <div class="row">
       {{#each FullcursosUser}}
@@ -472,7 +596,7 @@
                   <i class="material-icons">access_time</i> {{createdAt}}
                </div>
                <center>
-                  <a href="ver-curso/{{sigla}}" class="btn btn-primary">Acceder al curso</a>
+                  <a href="ver-curso-all/{{sigla}}" class="btn btn-primary">Acceder al curso</a>
                </center>
             </div>
          </div>
