--- a/imports/templates/preguntas.html
+++ b/imports/templates/preguntas.html
@@ -1,3 +1,219 @@
+<template name="preguntas_curso">
+   <div class="row">
+      <div class="col-md-12">
+         <div class="card">
+            <div class="card-header" data-background-color="white" style="background-color: #ffffff;">
+               <div class="container-fluid">
+                  <div class="navbar-header">
+                     <a class="navbar-brand" style="color: #000;" href="#">
+                        Preguntas y Respuestas por curso
+                        <div class="ripple-container"></div>
+                     </a>
+                  </div>
+                  <div class="collapse navbar-collapse">
+                     <form class="navbar-form navbar-right"  role="crear pregunta"  id="crearPregunta" style="margin:-20px;margin-left: 48px;">
+                        <div class="form-group is-empty">
+                           <input class="form-control" name="createpregunta"  placeholder="Crear Nueva Pregunta" type="text">
+                           <span class="material-input"></span>
+                           <span class="material-input"></span>
+                        </div>
+                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                           <i class="material-icons">assignment_returned</i>
+                           <div class="ripple-container"></div>
+                        </button>
+                     </form>
+                     <form class="navbar-form navbar-right" style="margin:-20px">
+                        <div class="form-group is-empty">
+                           {{> EasySearch.Input index=index attributes = inputAttributes}}
+                           <span class="material-input"></span>
+                           <span class="material-input"></span>
+                        </div>
+                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                           <i class="material-icons">search</i>
+                           <div class="ripple-container"></div>
+                        </button>
+                     </form>
+                  </div>
+               </div>
+            </div>
+            <div class="card-content table-responsive">
+                <table class="table">
+                  <thead class="text-primary">
+                     <tr>
+                        <th>Pregunta</th>
+                        <th>usuario</th>
+                        <th>Fecha Creada</th>
+                        <th>Calificacion</th>
+                        <th> ---- </th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     {{#EasySearch.IfSearching index=index}}
+                     <td colspan="4">
+                        Buscando...
+                     </td>
+                     {{/EasySearch.IfSearching}}
+                     {{#EasySearch.IfNoResults index=index}}
+                     <td colspan="4" align="center">
+                        <h3>Ninguna Pregunta Encontrado</h3>
+                     </td>
+                     {{else}}
+                     {{/EasySearch.IfNoResults}}
+                     {{#EasySearch.Each index=index}}
+                     {{> preg_curso}}
+                     {{/EasySearch.Each}}
+					 <tr>
+						<td colspan="4">
+							
+						</td>
+					</tr>
+                     <tr>
+                        {{#EasySearch.IfInputEmpty index=index}}
+                        <td colspan="5" class="alert alert-warning">
+                           Puede realizar busquedas por alguna referencia de la pregunta
+                        </td>
+                        {{else}}
+                        <td colspan="5">
+                           {{resultsCount}} Resultados Encontrados.
+                        </td>
+                        {{/EasySearch.IfInputEmpty}}
+                     </tr>
+                     <tr>
+                        <td colspan="5" align="right">
+                           {{>EasySearch.Pagination index=index maxPages=10}}
+						   	
+                           {{! > EasySearch.LoadMore index=index}}
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
+         </div>
+      </div>
+   </div>
+</template>
+
+<template name="preg_curso">
+   <tr>
+      <td class="usuario" axis ="collapseme-{{@index}}"><span>{{pregunta}}</span></td>
+      <td class="usuario" axis ="collapseme-{{@index}}"><span>{{username}}</span></td>
+      <td class="usuario" axis ="collapseme-{{@index}}"><span>{{createdAt}}</span></td>
+      <td class="usuario" axis ="collapseme-{{@index}}"><span>
+        <a href="{{__originalId}}" class="mas1">
+            <i class="material-icons" style="float: left;width: 132px;">perthumb_up</i>
+            <p> {{puntos_mas}} pts</p>
+        </a>
+
+        <a href="{{__originalId}}" class="menos1">
+            <i class="material-icons" style="float: left;width: 132px;">perthumb_downson</i>
+            <p> {{puntos_menos}} pts</p>
+        </a>
+      </span></td>
+      <td class="usuario" axis ="collapseme-{{@index}}"><span><a href="/responder-pregunta-curso/{{__originalId}}" class="btn btn-danger">Responder a la Pregunta</a></span></td>
+   </tr>
+ <!--  <tr id="collapseme-{{@index}}" class="collapse out"> 
+      {{#if selected}}
+      <td colspan="2">
+         <div>
+            <span> El usuario <b>{{emails.[0].address}}</b> en este momento esta: <b>{{profile.estado}}</b> que desea hacer? </span>
+         </div>
+      </td>
+	  <td>
+		  <a href="/responder-pregunta/{{__originalId}}" class="btn btn-warning editUser" > Editar </a>
+	  </td>
+	  <td>
+		  <a class="btn btn-danger banUser">  Bannear </a>
+	  </td>
+      {{/if}}
+   </tr>-->
+</template>
+
+<template name="respuestas_pregunta_curso">
+   <div class="row">
+      <div class="col-md-12">
+         <div class="card">
+            <div class="card-header" data-background-color="white" style="background-color: #ffffff;">
+               <div class="container-fluid">
+                  <div class="navbar-header">
+                      {{#with Verpregunta}}
+                     <a class="navbar-brand" style="color: #000;" href="#">
+                        Respuestas de la pregunta: <b>{{pregunta}}</b>
+                        <div class="ripple-container"></div>
+                     </a>
+                     
+                     {{/with}}
+                  </div>
+                  <div class="collapse navbar-collapse">
+                    
+                  </div>
+               </div>
+            </div>
+            <div class="card-content table-responsive">
+               <table class="table">
+                  <thead class="text-primary">
+                     <tr>
+                        <th>Respuesta</th>
+                        <th>usuario</th>
+                        <th>Fecha Creada</th>
+                        <th>Calificacion</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                      {{#each VerRespuestas}}
+                     <tr>
+                        <td class="usuario" axis="collapseme-0"><span>{{respuesta}}</span></td>
+                        <td class="usuario" axis="collapseme-0"><span>{{username}}</span></td>
+                        <td class="usuario" axis="collapseme-0"><span>{{createdAt}}</span></td>
+                        <td class="usuario" axis="collapseme-0">
+                            <a href="{{_id}}" class="repMas1">
+                                <i class="material-icons" style="float: left;width: 132px;">perthumb_up</i>
+                                <p> {{puntos_mas}} pts</p>
+                            </a>
+
+                            <a href="{{_id}}" class="repMenos1">
+                                <i class="material-icons" style="float: left;width: 132px;">perthumb_downson</i>
+                                <p> {{puntos_menos}}  pts</p>
+                            </a>
+                        </td>
+                     </tr>
+                     {{/each}}
+                     <tr>
+                        <td colspan="4">
+                        <form id="repsPregunta">
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Respuesta</label>
+                                    <input type="text" name="resp" id="resp" class="form-control">
+                                    {{#with Verpregunta}}
+                                    <input type="hidden" name="rca" value="{{_id}}">
+                                    {{/with}}
+                                    <span class="material-input"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="form-group label-floating is-empty">
+                                    <label class="control-label"></label>
+                                    <button type = "submit" class="btn btn-primary"> Enviar respuesta</button>
+                                    <span class="material-input"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        </td>
+                     </tr>
+                     <tr>
+                        <td colspan="3" align="right">
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
+         </div>
+      </div>
+   </div>
+</template>
+
 <template name="preguntas">
    <div class="row">
       <div class="col-md-12">
